Added wireframing and changes to project

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,8 +9,9 @@
 	border: 6px solid #BBADA0;
 	background: #CCC0B3;
 	width: 25%;
-	padding-top: 4.5%;
-	padding-bottom: 4.5%;
+	color: #776e65;
+	padding-top: 4%;
+	padding-bottom: 4%;
 	text-align: center;
 	font-size: 50px;
 	font-weight: bold;
