--- a/css/custom5x5.css
+++ b/css/custom5x5.css
@@ -1,16 +1,24 @@
+body {
+    font-size: 20px;
+    font-family: 'Open Sans Condensed',verdana, sans-serif;
+    text-align: center;
+    background: #ECECEC;
+    margin: 0 0 0 0;
+}
+
 .grid {
+	margin-left: 420px;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border: 8px solid #BBADA0;
 	border-radius: 10px;
 	background-color: #CCC0B3;
-	width: 450px;
 }
 
 .grid-box {
 	border: 8px solid #BBADA0;
 	background: #CCC0B3;
-	width: 25%;
+	width: 20%;
 	color: #776e65;
 	padding-top: 3%;
 	padding-bottom: 3%;
@@ -24,13 +32,6 @@
 
 h1 {
 	font-weight: bold;
-}
-
-body {
-    font-size: 20px;
-    font-family: 'Open Sans Condensed',verdana, sans-serif;
-    text-align: center;
-    background: #ECECEC;
 }
 
 .container {
