--- a/css/custom.css
+++ b/css/custom.css
@@ -1,13 +1,20 @@
 .grid {
+	overflow: hidden;
+	float: none;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border: 8px solid #BBADA0;
 	border-radius: 10px;
 	background-color: #CCC0B3;
-	width: 450px;
+	padding: 0;
+	width: 464px;
 }
 
 .grid-box {
+	margin: 0;
 	border: 8px solid #BBADA0;
 	background: #CCC0B3;
 	width: 25%;
@@ -19,7 +26,6 @@
 	font-weight: bold;
 	padding-left: 0;
 	padding-right: 0;
-	position: relative;
 }
 
 h1 {
@@ -37,7 +43,15 @@ body {
 	margin-top: 20px;
 }
 
+.score-newgame {
+	display: inline-block;
+}
+
 .score-container {
+	float: none;
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	font-weight: bold;
 	background-color: #BBADA0;
@@ -53,6 +67,9 @@ body {
 }
 
 .btn-default {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 10px;
 	background-color: brown;
 	font-weight: bold;
@@ -71,3 +88,10 @@ a:hover {
 	color: black;
 	text-decoration: none;
 }
+
+.header {
+	width: 464px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
