--- a/css/custom6x6.css
+++ b/css/custom6x6.css
@@ -1,22 +1,20 @@
-body {
-    font-size: 20px;
-    font-family: 'Open Sans Condensed',verdana, sans-serif;
-    text-align: center;
-    background: #ECECEC;
-    margin: 0 0 0 0;
-}
-
 .grid {
-	margin-left: 385px;
+	overflow: hidden;
+	float: none;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border: 8px solid #BBADA0;
 	border-radius: 10px;
 	background-color: #CCC0B3;
-	width: 669.6px;
+	padding: 0;
+	width: 696px;
 }
 
 .grid-box {
+	margin: 0;
 	border: 8px solid #BBADA0;
 	background: #CCC0B3;
 	width: (100/6)%;
@@ -28,18 +26,32 @@ body {
 	font-weight: bold;
 	padding-left: 0;
 	padding-right: 0;
-	position: relative;
 }
 
 h1 {
 	font-weight: bold;
 }
 
+body {
+    font-size: 20px;
+    font-family: 'Open Sans Condensed',verdana, sans-serif;
+    text-align: center;
+    background: #ECECEC;
+}
+
 .container {
 	margin-top: 20px;
 }
 
+.score-newgame {
+	display: inline-block;
+}
+
 .score-container {
+	float: none;
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	font-weight: bold;
 	background-color: #BBADA0;
@@ -55,6 +67,9 @@ h1 {
 }
 
 .btn-default {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 10px;
 	background-color: brown;
 	font-weight: bold;
@@ -73,3 +88,10 @@ a:hover {
 	color: black;
 	text-decoration: none;
 }
+
+.header {
+	width: 696px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
