--- a/css/custom8x8.css
+++ b/css/custom8x8.css
@@ -1,11 +1,7 @@
-body {
-    font-size: 20px;
-    font-family: 'Open Sans Condensed',verdana, sans-serif;
-    text-align: center;
-    background: #ECECEC;
-}
-
 .grid {
+	overflow: hidden;
+	float: none;
+	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
@@ -13,33 +9,49 @@ body {
 	border: 8px solid #BBADA0;
 	border-radius: 10px;
 	background-color: #CCC0B3;
-	width: 892.8px;
+	padding: 0;
+	width: 928px;
 }
 
 .grid-box {
+	margin: 0;
 	border: 8px solid #BBADA0;
 	background: #CCC0B3;
 	width: 12.5%;
 	color: #776e65;
-	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-top: 1.5%;
+	padding-bottom: 1.5%;
 	text-align: center;
 	font-size: 50px;
 	font-weight: bold;
 	padding-left: 0;
 	padding-right: 0;
-	position: relative;
 }
 
 h1 {
 	font-weight: bold;
 }
 
+body {
+    font-size: 20px;
+    font-family: 'Open Sans Condensed',verdana, sans-serif;
+    text-align: center;
+    background: #ECECEC;
+}
+
 .container {
 	margin-top: 20px;
 }
 
+.score-newgame {
+	display: inline-block;
+}
+
 .score-container {
+	float: none;
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 20px;
 	font-weight: bold;
 	background-color: #BBADA0;
@@ -55,6 +67,9 @@ h1 {
 }
 
 .btn-default {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
 	margin-top: 10px;
 	background-color: brown;
 	font-weight: bold;
@@ -73,3 +88,10 @@ a:hover {
 	color: black;
 	text-decoration: none;
 }
+
+.header {
+	width: 928px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
